--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/peterapps/fulljs",
   "dependencies": {
     "axios": "^0.19.2",
+    "body-parser": "^1.19.0",
     "ejs": "^3.1.2",
     "express": "^4.17.1",
     "json-loader": "^0.5.7",
